// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. date and times publication with non-london timezone 1`] = `
Array [
  <time
    dateTime="2017-01-01T14:32:00.000Z"
  >
    Sunday January 01 2017, 02:32pm GMT
  </time>,
  <span>
    , The Times
  </span>,
]
`;

exports[`1. date and times publication with non-london timezone 2`] = `
Array [
  <time
    dateTime="2017-07-01T14:32:00.000Z"
  >
    Saturday July 01 2017, 03:32pm BST
  </time>,
  <span>
    , The Times
  </span>,
]
`;
